--- a/src/demo.html
+++ b/src/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?11964244');
-      src: url('./font/fontello.eot?11964244#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?11964244') format('woff'),
-           url('./font/fontello.ttf?11964244') format('truetype'),
-           url('./font/fontello.svg?11964244#fontello') format('svg');
+      src: url('./font/fontello.eot?38757969');
+      src: url('./font/fontello.eot?38757969#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?38757969') format('woff'),
+           url('./font/fontello.ttf?38757969') format('truetype'),
+           url('./font/fontello.svg?38757969#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -301,9 +301,10 @@ body {
         <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-tint">&#xe800;</i> <span class="i-name">icon-tint</span><span class="i-code">0xe800</span></div>
         <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-air">&#xe801;</i> <span class="i-name">icon-air</span><span class="i-code">0xe801</span></div>
         <div class="the-icons span3" title="Code: 0xf0e4"><i class="demo-icon icon-gauge">&#xf0e4;</i> <span class="i-name">icon-gauge</span><span class="i-code">0xf0e4</span></div>
-        <div class="the-icons span3" title="Code: 0xf185"><i class="demo-icon icon-sun">&#xf185;</i> <span class="i-name">icon-sun</span><span class="i-code">0xf185</span></div>
+        <div class="the-icons span3" title="Code: 0xf160"><i class="demo-icon icon-sort-alt-up">&#xf160;</i> <span class="i-name">icon-sort-alt-up</span><span class="i-code">0xf160</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf185"><i class="demo-icon icon-sun">&#xf185;</i> <span class="i-name">icon-sun</span><span class="i-code">0xf185</span></div>
         <div class="the-icons span3" title="Code: 0xf186"><i class="demo-icon icon-moon">&#xf186;</i> <span class="i-name">icon-moon</span><span class="i-code">0xf186</span></div>
         <div class="the-icons span3" title="Code: 0xf2c8"><i class="demo-icon icon-thermometer-3">&#xf2c8;</i> <span class="i-name">icon-thermometer-3</span><span class="i-code">0xf2c8</span></div>
         <div class="the-icons span3" title="Code: 0xf2cb"><i class="demo-icon icon-thermometer-0">&#xf2cb;</i> <span class="i-name">icon-thermometer-0</span><span class="i-code">0xf2cb</span></div>
